Fix: links in dark mode

--- a/website/src/components/Scholarships/ScholarshipComponent.css
+++ b/website/src/components/Scholarships/ScholarshipComponent.css
@@ -1,20 +1,28 @@
-.page-title{
-    margin-top: 50px;
-    margin-bottom: 30px;
+.page-title {
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
-.content-box{
-    margin-top: 30px;
-    margin-bottom: 50px;
+.content-box {
+  margin-top: 30px;
+  margin-bottom: 50px;
 }
 
-.scholarship-detail{
-    font-size: x-small;
+.scholarship-detail {
+  font-size: x-small;
 }
 
-.card-img-overlay{
-    background-color: rgba(255, 192, 203, 0.8);
-    height: auto;
+.card-img-overlay {
+  background-color: rgba(255, 192, 203, 0.8);
+  height: auto;
+}
+
+a {
+  color: var(--text-color);
+}
+
+.card-body {
+  background-color: var(--background-color);
 }
 /*
 .card {
